@@ -1,3 +1,10 @@
+Fri Nov 16 13:47:27 2001  George Lebl <jirka@5z.com>
+
+	* Makefile.am: remove $(includedir) from includes to prevent old
+	  gnome headers from creeping in
+
+	* status.c: fix compilation a little.
+
 2001-11-16  Mark McLoughlin  <mark@skynet.ie>
 
 	Note: this won't build without the patch to 
